# stacyvm

./: .dockerignore  .gitignore  .mintignore  CHANGELOG.md  CONTRIBUTING.md  DESIGN.md  Dockerfile  Makefile  README.md  SECURITY.md  STACYOS_PRD.md  build.sh  docker-compose.yml  docs.json  go.mod  go.sum  index.md  later.txt  package.json  style.css  sync-templates.sh
.mintlify/: Assistant.md
deploy/: .env.example  docker-compose.yml  stacyvm.env.example  stacyvm.production.yaml  stacyvm.service
design_handoff_stacyvm_tui/: PLAN.md  README.md
desktop/: daemon.go  go.mod  go.sum  main.go  wails.json
docs/: admin-control-plane.md  api.md  cluster-conformance.md  deployment.md  desktop-app.md  docs.go  enterprise-signoff-runbook.md  live-preview-architecture.md  openapi.json  production-readiness.md  provider-contract.md  public-readiness-evidence.md  public-support-matrix.md  releasing.md  remote-worker-staging.md  rest-api.md  runtime-certification.md  runtime-conformance.md  security-governance.md  snapshot-restore.md  ssh-plan.md  swagger.json  swagger.yaml  threat-model.md  worker-rpc-contract.md
scripts/: benchmark.sh  build-rootfs-arm64.sh  build-rootfs.sh  certify-runtime.sh  certify-worker-identity.sh  check-swagger.sh  ci-cluster-conformance.sh  ci-smoke-deployment.sh  (+17 more)
sdk/python/: README.md  pyproject.toml
sdk/python/stacyvm/: __init__.py  async_client.py  async_sandbox.py  client.py  exceptions.py  models.py  providers.py  sandbox.py  streaming.py  templates.py
sdk/python/tests/: test_client.py  test_client_parity.py  test_llm.py  test_pdf_gen.py
(+393 files in other folders)
