[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "stacyvm"
version = "0.1.0"
description = "Python SDK for StacyVM — self-hosted microVM sandboxes for LLMs"
readme = "README.md"
requires-python = ">=3.9"
license = {text = "MIT"}
authors = [
    {name = "StacyOs"},
]
keywords = ["stacyvm", "sandbox", "microvm", "llm", "code-execution", "firecracker", "ai-agent"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Software Development :: Libraries",
    "Topic :: System :: Emulators",
]
dependencies = [
    "httpx>=0.27.0",
]

[project.urls]
Homepage = "https://github.com/StacyOs/stacyvm"
Repository = "https://github.com/StacyOs/stacyvm"
Documentation = "https://github.com/StacyOs/stacyvm#use-with-python"
Issues = "https://github.com/StacyOs/stacyvm/issues"

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-httpx>=0.30.0",
]

[tool.setuptools.packages.find]
include = ["stacyvm*"]
